# acestep.cpp

./: .gitignore  CMakeLists.txt  README.md  buildall.cmd  buildall.sh  buildwebui.sh
.github/workflows/: ci-build.yml  release.yml
debian/: acestep.cpp-blas.install  acestep.cpp-blas.service  acestep.cpp-cuda.install  acestep.cpp-cuda.service  acestep.cpp-sycl.install  acestep.cpp-sycl.service  acestep.cpp-vulkan.install  acestep.cpp-vulkan.service  acestep.cpp.acestep.cpp-cpu.service  acestep.cpp.install  acestep.cpp.postinst  changelog  control  not-installed  rules  shlibs.local
debian/source/: options
docs/: ARCHITECTURE.md
src/: audio-io.cpp  audio-io.h  request.cpp  request.h  task-types.h  vae.h
tools/: ace-server.cpp  ace-synth.cpp  mp3-codec.cpp  neural-codec.cpp  version.cmake  webui-substitute.cmake
tools/webui/: .prettierignore
tools/webui/src/components/: Dialog.svelte  RequestForm.svelte  SongCard.svelte
tools/webui/src/lib/: api.ts  config.ts  fields.ts  state.svelte.ts  types.ts
